syntax = "proto3";

package contract;

import "google/protobuf/any.proto";

message Instance {
    bytes key = 1;
    google.protobuf.Any value = 2;
    string contractID = 3;
    bool deleted = 4;
    bytes accessControl = 5;
}

message SpawnActionProto {
    string contractID = 1;
    bytes argument = 2;
}

message InvokeActionProto {
    bytes key = 1;
    bytes argument = 2;
}

message DeleteActionProto {
    bytes key = 1;
}
